--- a/index.html
+++ b/index.html
@@ -79,9 +79,15 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="btn-container">
+            <div class="btn-container">
                 <a href="sobre_mi.html" class="btn-vermas">Conocer más</a>
-            </div> -->
+            </div>
+            <div class="icons">
+                <img src="img/facebook.svg" alt="icon-facebook">
+                <img src="img/instagram.svg" alt="icon-instagram">
+                <img src="img/tiktok.svg" alt="icon-tiktok">
+                <img src="img/twitter.svg" alt="icon-twitter">
+            </div>
         </section>
         <!-- END -->
 
@@ -188,7 +194,6 @@
             </section>
             <!-- END -->
 
-        
 
 
         <!-- Testimonios START -->
@@ -247,8 +252,9 @@
 
         <!-- Contacto START -->
         <section id="contacto" class="contacto">
-            <h2>ESCRÍBEME</h2>
+        <div class="contact-domicilio">
             <div class="elementos">
+            <h2>ESCRÍBEME</h2>
                 <div class="elemento-1">
                     <form id="form-whatsapp" action="#" method="POST">
                         <div class="form-group">
@@ -263,6 +269,14 @@
                     </form>
                 </div>
             </div>
+            <div class="elementoss">
+                <h2>MI ADOMICILIO</h2>
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.2526667730936!2d-75.63265072635201!3d6.267232726091055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442bdcf20c296d%3A0xb51d075cc377c6c5!2sCl.%2048bb%20%23122-50%2C%20Eduardo%20Santos%2C%20San%20Crist%C3%B3bal%2C%20Medell%C3%ADn%2C%20Antioquia!5e1!3m2!1ses!2sco!4v1755697976192!5m2!1ses!2sco"
+                width="500" height="350" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
         </section>
         <!--END -->
     </main>
