--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -48,23 +48,84 @@
 
 
     <!-- Sobre_mí START-->
-        <section id="sobre_mi" class="sobre_mi">
+        <section class="sobre_mi_detallado">
             <h2>SOBRE MÍ</h2>
-            <div class="elementos">
-                <div>
-                    <img src="img/sobre_mi.png" alt="sobre_mi">
-                </div>
-                <div class="texto">
-                    <h3>Manicurista</h3>
+        <div>
+            <!-- Historia -->
+            <div class="bloque">
+                
+                <div class="bloque-texto">
+                    <h3>Historia</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex aliquid quia maxime reiciendis sed ipsa eligendi fugiat modi nam corporis asperiores pariatur facilis quisquam qui, quos delectus quis officia unde.
-                        Illum facere fugit, perspiciatis sapiente magnam dignissimos unde, sunt tempore nostrum, ut maxime. Corporis ad totam labore molestias consectetur, quibusdam temporibus recusandae! Voluptates expedita fugiat animi quibusdam facere. Repudiandae, saepe!
+                        Todo inició con una curiosidad simple: embellecer manos. Poco a poco, esa curiosidad se convirtió en una pasión que me llevó a estudiar, practicar y dedicarme de lleno al mundo del cuidado de uñas. Desde hace un año comencé a trabajar formalmente como manicurista, y cada persona que atiendo se vuelve parte de la historia que estoy construyendo.
+                    </p>
+                </div>
+                <div class="bloque-img">
+                    <img src="img/historia.png" alt="Historia Dalia">
+                </div>
+            </div>
+
+            <!-- Misión -->
+            <div class="bloque">
+                <div class="bloque-img">
+                    <img src="img/mision.png" alt="Misión Dalia">
+                </div>
+                <div class="bloque-texto">
+                    <h3>Misión</h3>
+                    <p>
+                        Brindar un servicio profesional donde el detalle, la precisión y el bienestar de cada clienta sean prioridad. Quiero que cada visita se sienta como un espacio seguro donde puedas relajarte, expresarte y salir con manos que reflejen tu estilo.
                     </p>
                 </div>
             </div>
-            <div class="btn-container">
+
+            <!-- Visión -->
+            <div class="bloque">
+                <div class="bloque-texto">
+                    <h3>Visión</h3>
+                    <p>
+                        Mi objetivo es seguir creciendo, perfeccionando técnicas, explorando nuevas tendencias y creando una experiencia de alto nivel. A futuro, quiero abrir un estudio que combine estética, creatividad y profesionalismo.
+                    </p>
+                </div>
+                <div class="bloque-img">
+                    <img src="img/vision.png" alt="Visión Dalia">
+                </div>
+            </div>
+
+            <!-- Valores -->
+            <div class="bloque">
+                <div class="bloque-img">
+                    <img src="img/valores.png" alt="Valores Dalia">
+                </div>
+                
+                <div class="bloque-texto">
+                    <h3>Valores</h3>
+                    <ul>
+                        <li>Compromiso con la calidad</li>
+                        <li>Higiene y seguridad en cada procedimiento</li>
+                        <li>Respeto por el estilo de cada clienta</li>
+                        <li>Amabilidad y empatía</li>
+                        <li>Aprendizaje constante</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Equipo -->
+            <div class="bloque">
+                <div class="bloque-texto">
+                    <h3>¿Quién soy?</h3>
+                    <p>
+                        Soy Dalia, manicurista certificada y creadora de esta marca. Trabajo de manera independiente y pongo toda mi atención en cada servicio, desde la preparación de las uñas hasta el acabado final.
+                    </p>
+                </div>
+                <div class="bloque-img">
+                    <img src="img/quien_soy.png" alt="Equipo Dalia">
+                </div>
+            </div>
+        </div>
+        <div class="btn-container">
                 <a href="index.html#sobre_mi" class="btn-vermas">Volver</a>
             </div>
+
         </section>
         <!-- END -->
 
